--- a/index.ipynb
+++ b/index.ipynb
@@ -65,11 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; import sqlite, create a connection and then a cursor object."
+    "#Your code here; import sqlite, create a connection and then a cursor object.\n",
+    "import sqlite3\n",
+    "connection = sqlite3.connect(\"dogs.db\")\n",
+    "cursor = connection.cursor()"
    ]
   },
   {
@@ -120,11 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Little Ann', 'coonhound'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT name, breed FROM dogs WHERE gender = 'F';\").fetchall()"
    ]
   },
   {
@@ -136,11 +154,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None,),\n",
+       " ('Clifford',),\n",
+       " ('Lassie',),\n",
+       " ('Little Ann',),\n",
+       " ('McGruff',),\n",
+       " ('Pickles',),\n",
+       " ('Scooby',),\n",
+       " ('Snoopy',),\n",
+       " ('Snowy',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT name FROM dogs ORDER BY name;\").fetchall()"
    ]
   },
   {
@@ -152,11 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT * FROM dogs WHERE name IS NULL;\").fetchall()"
    ]
   },
   {
@@ -168,11 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Snoopy', 'beagle'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Pickles', 'black lab'),\n",
+       " ('Clifford', 'big red'),\n",
+       " ('Lassie', 'collie'),\n",
+       " (None, 'golden retriever')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT name, breed FROM dogs WHERE hungry = 1;\").fetchall()"
    ]
   },
   {
@@ -184,11 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Pickles', 13, 'mischievous')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT name, age, temperament FROM dogs ORDER BY age DESC;\").fetchone()"
    ]
   },
   {
@@ -200,11 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Snoopy', 3, 'M', 'beagle', 'friendly', 1),\n",
+       " (6, 'Clifford', 4, 'M', 'big red', 'smiley', 1),\n",
+       " (9, None, 4, 'M', 'golden retriever', 'playful', 1)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"SELECT * FROM dogs ORDER BY age LIMIT 3;\").fetchall()"
    ]
   },
   {
@@ -216,11 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('McGruff', 'bloodhound'),\n",
+       " ('Scooby', 'great dane'),\n",
+       " ('Little Ann', 'coonhound'),\n",
+       " ('Lassie', 'collie'),\n",
+       " ('Snowy', 'fox terrier')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"\"\"SELECT name, breed FROM dogs WHERE age BETWEEN 5 AND 10 ;\"\"\").fetchall()"
    ]
   },
   {
@@ -232,11 +341,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(None, 4, 1),\n",
+       " ('Clifford', 4, 1),\n",
+       " ('Lassie', 7, 1),\n",
+       " ('Scooby', 6, 1),\n",
+       " ('Snoopy', 3, 1)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "cursor.execute(\"\"\"SELECT name, age, hungry FROM dogs \n",
+    "WHERE (hungry = 1) AND (age BETWEEN 2 AND 7) ORDER BY name;\"\"\").fetchall()\n"
    ]
   },
   {
@@ -270,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
